# aurex-trade

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  mkdocs.yml  project_concept.md  pyproject.toml
deploy/: Caddyfile  gunicorn.conf.py
docs/: architecture.md  backtesting.md  log-analysis.md  strategies.md  user-guide.md
docs/user/: getting-started.md  glossary.md  index.md  strategy-testing.md  trading-concepts.md  understanding-results.md
docs/user/stylesheets/: extra.css
scripts/: analyse_run.py  diagnose_closed_trade_lookup.py
src/aurex_trade/: __init__.py  __main__.py  app.py  config.py  logging.py  metrics.py
src/aurex_trade/backtest/: __init__.py  __main__.py  cli.py  config.py  results.py  runner.py  sweep.py  walk_forward.py
src/aurex_trade/domain/: __init__.py  enums.py  models.py
src/aurex_trade/engine/: __init__.py  trading_engine.py
src/aurex_trade/ports/: __init__.py  auth.py  broker.py  credential_store.py  historical_data.py  market_data.py  repository.py  run_store.py  session.py
src/aurex_trade/web/: __init__.py  __main__.py  _bot_factory.py  _bot_sessions.py  _defaults_helpers.py  _run_helpers.py  app.py  config.py  dependencies.py  errors.py  ratelimit.py  schemas.py  tasks.py
tests/: conftest.py
tests/integration/: test_backtest_e2e.py  test_sweep_e2e.py  test_trading_engine.py
tests/unit/adapters/: test_backtest_broker.py  test_backtest_broker_grid.py  test_backtest_market_data.py  test_credential_store.py  test_data_store.py  test_google_oauth.py  test_memory_repository.py  test_oanda_broker.py  test_oanda_connection.py  test_oanda_market_data.py  test_paper_broker.py  test_run_store.py  test_session_store.py  test_sqlite_market_data_store.py  test_sqlite_repository.py  test_user_data_preferences.py  test_user_defaults_store.py
tests/unit/backtest/: test_cli_params.py  test_metrics.py  test_runner.py  test_runner_grid.py  test_runner_sliding_grid.py  test_sweep.py  test_walk_forward.py
tests/unit/domain/: test_ciby_grid_hedging.py  test_ciby_hedged_doubling_grid.py  test_ciby_hedged_grid.py  test_ciby_sliding_grid.py  test_models.py  test_risk_engine.py  test_rsi_mean_reversion.py  (+3 more)
(+119 files in other folders)
