[project]
name = "aurex-trade"
version = "0.1.0"
description = "Automated gold trading bot using OANDA"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "authlib>=1.3.0",
    "cryptography>=44.0.0",
]

[project.scripts]
aurex-trade = "aurex_trade.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aurex_trade"]

# --- Testing ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]

# --- Linting & Formatting ---
[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "RUF",   # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"src/aurex_trade/backtest/cli.py" = ["T201"]
"src/aurex_trade/web/routers/*.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["aurex_trade"]

# --- Type Checking ---
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
